update API authentication
- fix typo in oath2 scope
- remove basic authe and API key
